fixed title label UI overflow

--- a/assets/css/home-style.css
+++ b/assets/css/home-style.css
@@ -8,13 +8,13 @@
 }
 
 .topic-title {
-  padding: 0% 10% 5% 10%;
-  font-size: 2em;
-  color: #111;
-  /* letter-spacing: .5em; */
-  text-align: center;
-  /* text-transform: uppercase; */
-  margin-bottom: 1em;
+	padding: 0% 10% 5% 10%;
+	font-size: 2em;
+	color: #111;
+	/* letter-spacing: .5em; */
+	text-align: center;
+	/* text-transform: uppercase; */
+	margin-bottom: 1em;
 }
 
 .website-creator-by {
@@ -30,7 +30,8 @@
 	letter-spacing: .4em;
 	text-align: center;
 
-	background: -webkit-linear-gradient(320deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 10%, rgba(252,176,69,1) 75%);
+	background: -webkit-linear-gradient(320deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 10%, rgba(252, 176, 69, 1) 75%);
+	background-clip: text;
 
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
@@ -45,58 +46,58 @@
 }
 
 .homepage-static-section {
-  max-width: 100% !important;
-  padding-top: 0%;
-  /* padding: 0% 10% 0% 17%; */
+	max-width: 100% !important;
+	padding-top: 0%;
+	/* padding: 0% 10% 0% 17%; */
 }
 
 h5 {
-  color: white;
+	color: white;
 }
 
 .underline {
-  text-decoration-line: underline;
-  text-decoration-thickness: 3px;
-  text-underline-offset: 6px;
+	text-decoration-line: underline;
+	text-decoration-thickness: 3px;
+	text-underline-offset: 6px;
 }
 
 .sliding-icon-label {
-  color: white;
-  padding-top: 7px;
+	color: white;
+	padding-top: 7px;
 }
 
 .homepage-sliding-section {
-  position: fixed;
-  top: 0px;
-  /* padding: 5% 10% 0% 10%; */
-  padding-top: 1%;
-  padding-bottom: .75em;
-  max-width: 100% !important;
-  /* -webkit-mask: linear-gradient(180deg, transparent 50%, transparent 100%, black); */
-  background: transparent;
-  /* background: linear-gradient(180deg, rgba(0,0,0,.2) 5%, rgba(0,0,0,0) 100%); */
-  backdrop-filter: blur(5px);
-  
-  display: none;
-  visibility: hidden;
-  z-index: 100;
+	position: fixed;
+	top: 0px;
+	/* padding: 5% 10% 0% 10%; */
+	padding-top: 1%;
+	padding-bottom: .75em;
+	max-width: 100% !important;
+	/* -webkit-mask: linear-gradient(180deg, transparent 50%, transparent 100%, black); */
+	background: transparent;
+	/* background: linear-gradient(180deg, rgba(0,0,0,.2) 5%, rgba(0,0,0,0) 100%); */
+	backdrop-filter: blur(5px);
+
+	display: none;
+	visibility: hidden;
+	z-index: 100;
 }
 
 .home-text-box {
-  font-size: 20px;
-  color: black;
-  background-color: transparent;
-  padding: 2% 10% 3% 10%;
+	font-size: 20px;
+	color: black;
+	background-color: transparent;
+	padding: 2% 10% 3% 10%;
 }
 
 .featured-section {
 	text-align: center;
 	margin: 6em 0em 2em 0em;
-  padding: 0% 10% 0% 10%;
+	padding: 0% 10% 0% 10%;
 }
 
 #last-homepage-section {
-  margin-bottom: 10em;
+	margin-bottom: 10em;
 }
 
 .mini-banner {
@@ -106,29 +107,31 @@ h5 {
 }
 
 .mini-banner-label {
-	padding-left: 25%;
-	padding-right: 25%;
-	text-align: center;
+	margin-left: 10%;
+	margin-right: 10%;
+	padding-top: 0em;
+	padding-bottom: 0em;
+	text-align: center !important;
 }
 
 .subtopic-mini-banner-label {
-	padding-left: 25%;
-	padding-right: 25%;
+	margin-left: 10%;
+	margin-right: 10%;
 	padding-top: 0em;
 	padding-bottom: 0em;
-	text-align: center;\
+	text-align: center !important;
 }
 
 .homepage-static-section {
-  opacity: 0;
+	opacity: 0;
 }
 
 .homepage-static-section.active {
-  opacity: 1;
+	opacity: 1;
 }
 
 .homepage-static-section.active.fade-in {
-  animation: fade-in 0.75s ease-in;
+	animation: fade-in 0.75s ease-in;
 }
 
 .reveal-website-opener {
@@ -181,11 +184,11 @@ h5 {
 }
 
 .homepage-static-section.inactive {
-  opacity: 1;
+	opacity: 1;
 }
 
-.homepage-static-section.inactive.fade-out{
-  animation: fade-out 0.75s ease-in;
+.homepage-static-section.inactive.fade-out {
+	animation: fade-out 0.75s ease-in;
 }
 
 .reveal-featured-article.inactive {
@@ -242,21 +245,23 @@ h5 {
 }
 
 @keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
 }
 
 @keyframes fade-out {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
+	0% {
+		opacity: 1;
+	}
+
+	100% {
+		opacity: 0;
+	}
 }
 
 @keyframes fade-bottom {
@@ -264,6 +269,7 @@ h5 {
 		transform: translateY(100px);
 		opacity: 0;
 	}
+
 	100% {
 		transform: translateY(0);
 		opacity: 1;
@@ -275,6 +281,7 @@ h5 {
 		transform: translateY(0px);
 		opacity: 1;
 	}
+
 	100% {
 		transform: translateY(100px);
 		opacity: 0;
@@ -286,6 +293,7 @@ h5 {
 		transform: translateX(-100px);
 		opacity: 0;
 	}
+
 	100% {
 		transform: translateX(0);
 		opacity: 1;
@@ -297,6 +305,7 @@ h5 {
 		transform: translateX(100px);
 		opacity: 0;
 	}
+
 	100% {
 		transform: translateX(0);
 		opacity: 1;
@@ -306,5 +315,5 @@ h5 {
 #collapse a:link,
 #collapse a:visited,
 #collapse a:hover {
-	 color: white;
+	color: white;
 }
